<resources>
    <string name="app_name">NY Times</string>
    <string name="menu_about">Об авторе</string>

    <string name="random_article">Под потолком веранды над большим столом для многочисленных гостей располагалось гнездо, в котором в одиночестве сидела ласточка. Я не обратил бы на это внимания, если бы Геннадий с удивлением не спросил: «В здешние края ласточки всегда возвращаются так рано?»</string>
    <string name="random_title">Осеннее настроение: Фотографии редких животных рыжего окраса</string>

    <string name="about_photo">Фото</string>
    <string name="about_job_description">Логотип работы</string>
    <string name="about_job_title">Менеджер группы поддержки</string>
    <string name="about_study_description">Study image</string>
    <string name="about_study_title">Студент Android Academy</string>
    <string name="bio">Работаю в компании Qiwi с декабря 2014го. Пару лет работал специалистом группы поддержки, затем перешел в отдел рассчетного центра, где освоил SQL.
        В данный момент работаю менеджером группы поддежки Совести, параллельно изучаю Java и Android</string>
    <string name="about_message_hint">Введите сообщение</string>
    <string name="about_message_send">Отправить сообщение</string>
    <string name="about_copyright">©2018 Sergey</string>

    <string name="news_image">Фото</string>
    <string name="about_title">Малахов Сергей</string>
    <string name="url_telegram">https://telegram.me/jaymsk</string>
    <string name="url_vk">https://vk.com/s6000</string>
    <string name="url_instagram">https://instagram.com/malakhov5</string>
    <string name="my_email">baunty3000@gmail.com</string>
    <string name="email_subject">Привет! Я из приложения !</string>

    <string name="error_mail_client">Для отправки почты нужен почтовый клиент</string>
    <string name="error_no_id">id не обработан</string> <!--hi-->
    <string name="error_no_browser">Установите браузер</string>
    <string name="btn_try_again">Repeat</string>
    <string name="tv_network_error">Network error. Please check your network connection and try
        again
    </string>
    <string name="tv_server_error">Network error. Please check your network connection and try
        again
    </string>
    <string name="tv_no_data">No data</string>
    <string name="text_intro">Welcome!</string>

    <string name="image_intro">Image Intro</string>
    <string name="edit_button_menu">Edit button</string>
    <string name="save_button_menu">Save button</string>
    <string name="delete_button_menu">Delete button</string>
    <string name="hint_editor_date">Дата статьи...</string>
    <string name="hint_editor_category">Категория статьи...</string>
    <string name="hint_editor_title">Заголовок статьи...</string>
    <string name="hint_editor_text">Текст статьи...</string>
    <string name="spinner">ActionBar Spinner</string>

</resources>
