<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/news_image_height"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                    android:id="@+id/details_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:srcCompat="@drawable/photo"
                    android:contentDescription="@string/news_image"/>

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/details_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_normal">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.CardContent">

                    <EditText
                            android:id="@+id/et_details_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_editor_date"
                            tools:text="@tools:sample/date/ddmmyy"/>
                    <EditText
                            android:id="@+id/et_details_category"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@string/random_title"
                            android:hint="@string/hint_editor_category"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:fontFamily="sans-serif-smallcaps"
                            android:textStyle="bold"/>
                    <EditText
                            android:id="@+id/et_details_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@string/random_title"
                            android:hint="@string/hint_editor_title"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:fontFamily="sans-serif-smallcaps"
                            android:textStyle="bold"/>

                    <EditText
                            android:id="@+id/et_details_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@string/random_article"
                            android:hint="@string/hint_editor_text"
                            android:layout_marginTop="@dimen/spacing_normal"
                            android:textSize="@dimen/text_size_normal"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>